Feat: Adição do atributo favorite na classe book.